--- a/hydra-riemann.cabal
+++ b/hydra-riemann.cabal
@@ -18,17 +18,22 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs: src
-  exposed-modules: Hydra.Riemann
+  exposed-modules:
+      Hydra.Types
+      Hydra.Riemann
   build-depends:
       base
     , aeson
     , attoparsec
+    , bytestring
     , containers
     , hriemann
     , network
     , optparse-applicative
+    , protocol-buffers
     , scientific
     , text
+    , time
     , uri-encode
     , websockets
   default-language: Haskell2010
